--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.snoopy.update">
 
-    <!--网络请求-->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!--保持手机唤醒-->
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--sd-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
 
     <application
             android:allowBackup="true"
@@ -40,6 +39,8 @@
                     android:resource="@xml/update_apk_paths" />
 
         </provider>
+
+
     </application>
 
 </manifest>
